--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -22,6 +22,8 @@ en:
         pending_invite_title_pending: Account Share Invite
         pending_invite_title_accepted: Invite Accepted
         pending_invite_title_rejected: Invite Rejected
+        sent_invite_title: Invite sent to %{invitee} for account "%{account_name}"
+        sent_invite_text: The invite was sent, but the recipient has not yet replied.
         pending_invite_text_pending: >
           %{inviter} has invited you to share their account "%{account_name}". A shared account means you both will be
           able to view and manage transactions, categories, and all other aspects associated with the account.
