Allow users to re-send cancelled invites

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -1,6 +1,6 @@
 {
   "en": {
-    "account_share_invites": {
+    "account_share_invites_sent": {
       "create": {
         "error": "There was an error sending the invite to share the account \"%{account_name}\" with \"%{invitee}\": %{error}",
         "success": "Your invite to share the account \"%{account_name}\" was successfully sent to \"%{invitee}\"!"
