--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -9,7 +9,7 @@ pt-BR:
     destroy:
       success: 'Conta "%{name}" removida com sucesso.'
 
-  account_share_invites:
+  account_share_invites_sent:
     create:
       success: 'Seu convite para compartilhar a conta "%{account_name}" foi enviado com sucesso para "%{invitee}"!'
       error: 'Ocorreu um erro ao enviar um convite para compartilhar a conta "%{account_name}" com "%{invitee}": %{error}'
