--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -6,7 +6,7 @@ en:
         account_share:
           attributes:
             user:
-              owner_self_share: is already the owner of the account.
+              owner_self_share: is already the owner of the wallet.
         user:
           attributes:
             base:
