--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -1,18 +1,18 @@
 pt-BR:
   accounts:
     create:
-      success: 'Conta criada com sucesso.'
-      error: 'Conta "%{name}" não pode ser criada: %{error}'
+      success: 'Carteira criada com sucesso.'
+      error: 'Carteira "%{name}" não pode ser criada: %{error}'
     update:
-      success: 'Conta "%{name}" atualizada com sucesso.'
-      error: 'Conta "%{name}" não pode ser atualizada: %{error}'
+      success: 'Carteira "%{name}" atualizada com sucesso.'
+      error: 'Carteira "%{name}" não pode ser atualizada: %{error}'
     destroy:
-      success: 'Conta "%{name}" removida com sucesso.'
+      success: 'Carteira "%{name}" removida com sucesso.'
 
   account_share_invites_sent:
     create:
-      success: 'Seu convite para compartilhar a conta "%{account_name}" foi enviado com sucesso para "%{invitee}"!'
-      error: 'Ocorreu um erro ao enviar um convite para compartilhar a conta "%{account_name}" com "%{invitee}": %{error}'
+      success: 'Seu convite para compartilhar a carteira "%{account_name}" foi enviado com sucesso para "%{invitee}"!'
+      error: 'Ocorreu um erro ao enviar um convite para compartilhar a carteira "%{account_name}" com "%{invitee}": %{error}'
 
   categories:
     create:
@@ -26,7 +26,7 @@ pt-BR:
 
   current_accounts:
     create:
-      error: 'Conta não encontrada.'
+      error: 'Carteira não encontrada.'
 
   profiles:
     update:
