--- a/config/locales/mailers.pt-BR.yml
+++ b/config/locales/mailers.pt-BR.yml
@@ -4,13 +4,13 @@ pt-BR:
     account_share_invite_sent:
       hello: Olá
       view_invite_link: Ver meus convites
-      sign_up_link: Criar minha conta em Finance Micromanager
+      sign_up_link: Criar minha carteira em Finance Micromanager
       invite_paragraph: >
-        %{inviter} lhe convidou para compartilhar sua conta "%{account_name}" em Finance Micromanager. Isso irá
-        permitir que você acesse, visualize e gerencie a conta, cria transações, visualise relatórios e dados
+        %{inviter} lhe convidou para compartilhar sua carteira "%{account_name}" em Finance Micromanager. Isso irá
+        permitir que você acesse, visualize e gerencie a carteira, cria transações, visualise relatórios e dados
         estatísticos, e muito mais. Para aceitar, clique no link abaixo, ou copie e cole a URL diretamente no seu
         navegador.
       new_account_paragraph: >
         Opa, parece que você ainda não tem uma conta com a gente em Finance Micromanager. Você precisará de uma antes
-        de aceitar este convite. Para criar uma conta, clique no link abaixo, ou copie e cole a URL diretamente no seu
+        de aceitar este convite. Para criar uma carteira, clique no link abaixo, ou copie e cole a URL diretamente no seu
         navegador.
