--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -2,30 +2,30 @@
   "pt-BR": {
     "account_share_invites_sent": {
       "create": {
-        "error": "Ocorreu um erro ao enviar um convite para compartilhar a conta \"%{account_name}\" com \"%{invitee}\": %{error}",
-        "success": "Seu convite para compartilhar a conta \"%{account_name}\" foi enviado com sucesso para \"%{invitee}\"!"
+        "error": "Ocorreu um erro ao enviar um convite para compartilhar a carteira \"%{account_name}\" com \"%{invitee}\": %{error}",
+        "success": "Seu convite para compartilhar a carteira \"%{account_name}\" foi enviado com sucesso para \"%{invitee}\"!"
       }
     },
     "account_share_mailer": {
       "account_share_invite_sent": {
         "hello": "Olá",
-        "invite_paragraph": "%{inviter} lhe convidou para compartilhar sua conta \"%{account_name}\" em Finance Micromanager. Isso irá permitir que você acesse, visualize e gerencie a conta, cria transações, visualise relatórios e dados estatísticos, e muito mais. Para aceitar, clique no link abaixo, ou copie e cole a URL diretamente no seu navegador.\n",
-        "new_account_paragraph": "Opa, parece que você ainda não tem uma conta com a gente em Finance Micromanager. Você precisará de uma antes de aceitar este convite. Para criar uma conta, clique no link abaixo, ou copie e cole a URL diretamente no seu navegador.\n",
-        "sign_up_link": "Criar minha conta em Finance Micromanager",
+        "invite_paragraph": "%{inviter} lhe convidou para compartilhar sua carteira \"%{account_name}\" em Finance Micromanager. Isso irá permitir que você acesse, visualize e gerencie a carteira, cria transações, visualise relatórios e dados estatísticos, e muito mais. Para aceitar, clique no link abaixo, ou copie e cole a URL diretamente no seu navegador.\n",
+        "new_account_paragraph": "Opa, parece que você ainda não tem uma conta com a gente em Finance Micromanager. Você precisará de uma antes de aceitar este convite. Para criar uma carteira, clique no link abaixo, ou copie e cole a URL diretamente no seu navegador.\n",
+        "sign_up_link": "Criar minha carteira em Finance Micromanager",
         "view_invite_link": "Ver meus convites"
       }
     },
     "accounts": {
       "create": {
-        "error": "Conta \"%{name}\" não pode ser criada: %{error}",
-        "success": "Conta criada com sucesso."
+        "error": "Carteira \"%{name}\" não pode ser criada: %{error}",
+        "success": "Carteira criada com sucesso."
       },
       "destroy": {
-        "success": "Conta \"%{name}\" removida com sucesso."
+        "success": "Carteira \"%{name}\" removida com sucesso."
       },
       "update": {
-        "error": "Conta \"%{name}\" não pode ser atualizada: %{error}",
-        "success": "Conta \"%{name}\" atualizada com sucesso."
+        "error": "Carteira \"%{name}\" não pode ser atualizada: %{error}",
+        "success": "Carteira \"%{name}\" atualizada com sucesso."
       }
     },
     "activerecord": {
@@ -49,7 +49,7 @@
           "account_share": {
             "attributes": {
               "user": {
-                "owner_self_share": "já é o(a) dono(a) desta conta."
+                "owner_self_share": "já é o(a) dono(a) desta carteira."
               }
             }
           },
@@ -81,7 +81,7 @@
     },
     "current_accounts": {
       "create": {
-        "error": "Conta não encontrada."
+        "error": "Carteira não encontrada."
       }
     },
     "date": {
@@ -475,44 +475,44 @@
         "index": {
           "accept": "Aceitar",
           "cancel": "Cancelar Convite",
-          "pending_invite_text_accepted": "Você aceitou o convite de %{inviter} para compartilhar sua conta \"%{account_name}\". Você pode agora visualizar e gerenciar transações, categorias, e todos os outros aspectos associados com a conta.\n",
-          "pending_invite_text_pending": "%{inviter} lhe convidou para compartilhar sua conta \"%{account_name}\". Uma conta compartilhada significa que ambos poderão visualizar e gerenciar transações, categorias, e todos os outros aspectos associados com a conta.\n",
-          "pending_invite_text_rejected": "Você negou o pedido de %{inviter} para compartilhar sua conta \"%{account_name}\". Você não terá acesso à conta, porém você pode ser convidado novamente.\n",
+          "pending_invite_text_accepted": "Você aceitou o convite de %{inviter} para compartilhar sua carteira \"%{account_name}\". Você pode agora visualizar e gerenciar transações, categorias, e todos os outros aspectos associados com a carteira.\n",
+          "pending_invite_text_pending": "%{inviter} lhe convidou para compartilhar sua carteira \"%{account_name}\". Uma carteira compartilhada significa que ambos poderão visualizar e gerenciar transações, categorias, e todos os outros aspectos associados com a carteira.\n",
+          "pending_invite_text_rejected": "Você negou o pedido de %{inviter} para compartilhar sua carteira \"%{account_name}\". Você não terá acesso à carteira, porém você pode ser convidado novamente.\n",
           "pending_invite_title_accepted": "Convite Aceito",
-          "pending_invite_title_pending": "Convite de Compartilhamento de Conta",
+          "pending_invite_title_pending": "Convite de Compartilhamento de Carteira",
           "pending_invite_title_rejected": "Convite Rejeitado",
           "reject": "Rejeitar",
           "sent_invite_text_cancelled": "O convite foi cancelado. O recipiente não pode mais aceitá-lo.",
           "sent_invite_text_pending": "O convite foi enviado, mas o recipiente ainda não respondeu.",
-          "sent_invite_title": "Convite enviado para %{invitee} para a conta \"%{account_name}\""
+          "sent_invite_title": "Convite enviado para %{invitee} para a carteira \"%{account_name}\""
         },
         "modal": {
           "cancel": "Cancelar",
           "confirm": "Enviar Convite",
-          "invitee_email_label": "Com quem você deseja compartilhar esta conta?",
+          "invitee_email_label": "Com quem você deseja compartilhar esta carteira?",
           "invitee_email_placeholder": "Digite o Email dele(a)",
-          "shared_warning_message": "Esta conta foi compartilhada com você por %{name}. Por favor tenha cuidado ao compartilhá-la com terceiros.",
+          "shared_warning_message": "Esta carteira foi compartilhada com você por %{name}. Por favor tenha cuidado ao compartilhá-la com terceiros.",
           "shared_warning_title": "Atenção",
-          "title": "Compartilhar Conta"
+          "title": "Compartilhar Carteira"
         }
       },
       "accounts": {
         "form": {
           "back": "Voltar",
           "currency_label": "Selecione a Moeda",
-          "edit_title": "Editar Conta \"%{account}\"",
+          "edit_title": "Editar Carteira \"%{account}\"",
           "name_label": "Nome",
-          "new_title": "Nova Conta",
+          "new_title": "Nova Carteira",
           "submit": "Salvar"
         },
         "index": {
           "currency": "Moeda",
           "name": "Nome",
-          "new": "Nova conta",
+          "new": "Nova carteira",
           "no_name": "--- Sem nome ---",
           "share_action_link_label": "Compartilhar",
           "shared_text": "Compartilhada com você por %{user}",
-          "title": "Contas"
+          "title": "Carteiras"
         }
       },
       "categories": {
@@ -553,8 +553,8 @@
       },
       "layout": {
         "account_switcher": {
-          "new_account_link": "Nova Conta",
-          "no_account_selected": "Selecione Conta"
+          "new_account_link": "Nova Carteira",
+          "no_account_selected": "Selecione Carteira"
         },
         "rails": {
           "close": "Fechar",
@@ -569,21 +569,21 @@
           "pagination": "Paginação"
         },
         "vertical_menu": {
-          "accounts": "Contas",
+          "accounts": "Carteiras",
           "categories": "Categorias",
-          "current_account": "Conta:",
+          "current_account": "Carteira:",
           "dashboard": "Dashboard",
           "profile": "Meu Perfil",
           "sign_in": "Fazer Login",
-          "sign_out": "Sair da Conta",
-          "sign_up": "Criar conta",
+          "sign_out": "Sair da Carteira",
+          "sign_up": "Criar carteira",
           "transactions": "Transações"
         }
       },
       "profiles": {
         "form": {
           "cancel_edit_button": "Cancelar",
-          "default_account_label": "Conta Padrão",
+          "default_account_label": "Carteira Padrão",
           "disabled_password_label": "Senha",
           "email_label": "Endereço de Email",
           "first_name_label": "Nome",
@@ -594,9 +594,9 @@
           "update_password_link_label": "Trocar Senha"
         },
         "show": {
-          "default_account": "Conta Padrão",
+          "default_account": "Carteira Padrão",
           "edit_button": "Editar perfil",
-          "empty_default_account_label": "-- Conta padrão não informada --",
+          "empty_default_account_label": "-- Carteira padrão não informada --",
           "empty_first_name_label": "-- Nome não informado --",
           "empty_last_name_label": "-- Sobrenome não informado --",
           "first_name": "Nome",
@@ -652,8 +652,8 @@
           "new": {
             "email_label": "Endereço de email",
             "password_label": "Escolha uma senha",
-            "submit": "Criar conta",
-            "title": "Crie sua conta"
+            "submit": "Criar carteira",
+            "title": "Crie sua carteira"
           }
         },
         "sessions": {
@@ -668,7 +668,7 @@
           "new": {
             "email_label": "Endereço de email",
             "submit": "Re-enviar email de desbloqueio",
-            "title": "Re-enviar email de desbloqueio de conta"
+            "title": "Re-enviar email de desbloqueio de carteira"
           }
         }
       }
