--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -456,7 +456,11 @@
           "page_desc": "Showing %{items} of %{total}",
           "page_next": "Next",
           "page_prev": "Previous",
-          "pagination": "Pagination"
+          "pagination": "Pagination",
+          "toast_title_danger": "Error",
+          "toast_title_info": "Info",
+          "toast_title_success": "Info",
+          "toast_title_warning": "Warning"
         },
         "vertical_menu": {
           "categories": "Categories",
